test/1.4/errors/T_EVLALEN.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

method init() {
    local int var = 4;
    local int vla[var];
    /// ERROR EVLALEN
    local int dummy = vla.len;
}
